chrome-extension/css/DarkSkin.css
@namespace url(http://www.w3.org/1999/xhtml);
/* #141823 is Messenger's normal text colour, white is normal background colour */
/* #1E1E1E and #2D2D30 are Visual Studio, don't ask */

b, strong {
    font-weight: 600 !important;
}

/* hot fixes */
._6-xo, ._7q1q{
    color: #888;
    font-weight: 500 !important;
}
._80co {
    border-radius: 60px !important;
}


/*smaller font weight */
._li,
._1enh,
._1tqi,
._17w2,
._1ht6,
._1ht7,
._1htf,
._54nh,
._2v6o,
._50f7,
._2pir,
._1lj0 {
    font-weight: 300 !important;
}

::-webkit-scrollbar {
    display: none!important;
}

.uiScrollableAreaBody{
  margin-right: 0px !important;
}
/*
.uiScrollableArea.fade .uiScrollableAreaWrap {
    margin-right: -30px !important;
}
*/


h2,
h3,
h4,
h5,
h6 {
    color: #eee!important;
}
._5743,
._4rph ._4rpj {
    color: white !important;
}
label {
    color: #aaa!important;
}

/*MessengerPlus Functions*/
.video-container {
	position:relative;
	padding-bottom:56.25%;
	padding-top:30px;
	height:0;
	overflow:hidden;
}

.video-container iframe, .video-container object, .video-container embed {
	position:absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
}

.pMenuButton {
  font-size: 18px !important;
  /* position: absolute !important;
  top: 9px !important;
  left: 40px !important; */
  height: 32px !important;
  width: 32px !important;
  color: rgba(255, 255, 255, 1) !important;
  background: url('../icons/plusIcon.png') !important;
  cursor: pointer !important;
}

.pinsym{
  position: absolute !important;
  top:27px !important;
  right: 30px !important;
  font-size: 20px !important;
  opacity: 0.2 !important;
  filter:saturate(0) brightness(40) !important;
}

.pinsym{
  position: absolute;
  top:27px;
  right: 30px;
  font-size: 20px;
  opacity: 0.2;
  filter:saturate(0) brightness(0);
}

.plusMenu {
  z-index: 99 !important;
  position: absolute !important;
  top: 48px;
  left: 135px;
  width: 185px;
  border: 1px solid;
  border-color: #333;
  border-radius: 2px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.plusMenuOptions{
  background-color: #333;
  padding-top: 5px;
  padding-bottom: 5px;
}

.plusMenuOptions a {
  background-color: #333;
  color: #ccc;
  display: block;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 24px;
  padding-right: 20px;
  text-decoration: none;
}

.plusMenuOptions a:hover {
  background-color: #505050;
  color: #fff;
}


.tshadow{
  width: 0;
  height: 0;
  position: absolute;
  top: -9px;
  left: 5px;
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-bottom: 9px solid #333;
}
.triangle{
    border-left: 8px solid transparent !important;
    border-right: 8px solid transparent !important;
    border-bottom: 8px solid #333;
    position: absolute;
    left: -8px;
    top: 1px;
}
.divider{
  border-bottom: 1px solid rgba(0, 0, 0, .05);
  margin: 6px 0;
  cursor: default !important;
}

/*typing animation box*/
._4gd0 {
    background-color: #282828 !important;
}
/* convo search box, to field (new message, add people), other inputs? */
._2y8y,
._2y8_,
._4jgt,
._55r1,
._2pgc,
._3rh0 ._26ly {
    background-color: #2d2d30 !important;
    color: white !important;
}
/* I hate placeholder styling */
input::-moz-placeholder {
    color: #ccc !important;
}
input::-webkit-input-placeholder {
    color: #888 !important;
}
/*images border */
._3m31 {
  border-color: #1d2129 !important;
}

/* main wrapper */
._4sp8 {
    background-color: #282828 !important;
    color: #eee!important;
}
/* detail wrapper */
._1q5- {
    border-left-color: rgba(255, 255, 255, .1) !important;
}
/* receipient/convo name in top bar */
._17w2 {
    color: white !important;
}
/* thread search */
._33p7 {
    background-color: rgba(30, 30, 30, 0.9) !important;
}

/* chat area stuff */
/* beginning of convo info */
._llq,
._36zg,
._1n-e._36zg {
    color: #eee !important;
}
/*block quotes*/
._pye{
    color: rgba(255, 255, 255, .3) !important;
}
._pyf{
  background-color: rgba(255, 255, 255, .3) !important;
}

/* message */
._29_7 ._hh7,
._29_7._-5k ._hh7 {
    background-color: #333333!important;
}
.__6j._43kk {
    border-bottom: 6px solid #333333!important;
    border-left: 10px solid #3333!important;
    border-right: 10px solid #333!important;
    border-top: 6px solid #333333!important;
}

/* reactions counts */
._koh {
    border-color: #333333 !important;
}
._koh li {
    color: #aaa !important;
}

/* quoted messages */
.ellipsis, .direction_ltr{
    color: #a5a5a5 !important;
}

._4_j4 {
    background-color: #282828!important;
}
._29_7 ._hh7,
._pyf{
    color: #a5a5a5!important;
}
._hh7 a {
    color: inherit !important;
}
._hh7._aol {
    border-color: transparent !important;
}
._29_7 ._hh7:active,
._-5k ._hh7,
._29_7 ._hh7 > span > a:hover {
    background-color: #333!important;
}
/* own message */
._o46._nd_ ._hh7{
    background-color: #474747;
    color: #f4f4f4 !important;
}
/* block quotes */
._pye {
    color: #ddd !important;
}
._o46._nd_ ._hh7:active,
._o46._nd_._-5k ._hh7 {
    background-color: #3d3d3d!important;
}
/* emoji-only messages */
._hh7._2f5r,
._-5k ._hh7._2f5r {
    background-color: transparent !important;
}
/* reactions */
._aou {
    background-color: #333 !important;
}
._4kf5 {
    background-color: transparent !important;
}
/* link info, platform attachment, game leaderboard */
._5i_d,
._5ssp,
._4ea2 {
    border-color: rgba(255, 255, 255, .1) !important;
}
.__6k,
.__6l,
._5sr2 {
    color: #ddd !important;
}
._4u4_ > h3,
._4u4- {
    color: #eee !important;
}
/* group polling */
._3b4u {
    color: #ddd !important;
}
._3b4h {
    background-color: #2d2d30 !important;
}
._58al {
    background-color: rgba(0, 0, 0, 0) !important;
    color: #ccc !important;
}
._5jn1 {
    color: #eee !important;
}
._9fw {
    background-color: rgba(0, 0, 0, .09) !important;
}
/* polling message dialog */
._1mr_,
._1mq- {
    color: #ddd !important;
}
/* ... */

